Fix workflow to dataset template

--- a/.github/workflows/publicacao_atualizacao_dataset_template.yml
+++ b/.github/workflows/publicacao_atualizacao_dataset_template.yml
@@ -55,3 +55,6 @@ jobs:
         run: pip install -r requirements.txt
       - name: Update dataset na instância CKAN
         run: dpckan --datastore --ckan-host "$CKAN_HOST" --ckan-key "$CKAN_KEY" dataset update
+        secrets:
+          CKAN_HOST: ${{ secrets.CKAN_HOST }}
+          CKAN_KEY: ${{ secrets.CKAN_KEY }}
